<resources>
    <string name="app_name">逼乎</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="hint_password">密码（6–18位）</string>
    <string name="hint_username">用户名（2–10个字符）</string>
    <string name="welcome">欢迎来到逼乎</string>
    <string name="menu">菜单</string>
    <string name="home">首页</string>
    <string name="question">提问</string>
    <string name="change_avatar">更换头像</string>
    <string name="logout">退出登录</string>
    <string name="my_favorite">我的收藏</string>
    <string name="load_more">加载更多</string>
    <string name="ask_question">提问</string>
    <string name="commit">提交</string>
    <string name="question_title">标题</string>
    <string name="question_description">问题描述...</string>
    <string name="add_img">添加照片</string>
    <string name="talk">说点什么吧……</string>
    <string name="answer">回答</string>
    <string name="detail">详情</string>
    <string name="exciting">赞</string>
</resources>
