<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_gray_24dp"
            android:title="@string/home"/>
        <item
            android:id="@+id/question"
            android:icon="@drawable/ic_question_gray_24dp"
            android:title="@string/question"/>
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_favorite_pink_24dp"
            android:title="@string/my_favorite"/>
        <item
            android:title="账户管理">
            <menu>
                <item
                    android:id="@+id/avatar"
                    android:icon="@drawable/ic_face_gray_24dp"
                    android:title="@string/change_avatar"/>
                <item
                    android:id="@+id/changePassword"
                    android:title="更改密码"
                    android:icon="@drawable/ic_key_gray_24dp"/>
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_exit_gray_24dp"
                    android:title="@string/logout"/>
            </menu>
        </item>
    </group>
</menu>